--- a/platform/templates/canary-service.yaml
+++ b/platform/templates/canary-service.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.canaryService.name }}
-  namespace: {{ .Values.canaryService.namespace }}
+  name: {{ .Values.global.chartName }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     app: {{ .Values.canaryService.appName }}
