--- a/platform/templates/deployment.yaml
+++ b/platform/templates/deployment.yaml
@@ -2,8 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.deployment.name }}
-  namespace: {{ .Values.deployment.namespace }}
+  name: {{ .Values.global.chartName }}-deployment
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.deployment.replicas }}
   selector:
