--- a/platform/templates/namespace.yaml
+++ b/platform/templates/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Values.namespace.name }}
+  name: {{ .Values.global.namespace }}
   labels:
     istio-injection: enabled
 {{- end }}
