--- a/platform/templates/service-account.yaml
+++ b/platform/templates/service-account.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceAccount.name }}-sa
-  namespace: {{ .Values.serviceAccount.namespace }}
+  name: {{ .Values.global.chartName }}-service-account
+  namespace: {{ .Values.global.namespace }}
   {{- if .Values.serviceAccount.annotations }}
   annotations:
   {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
