--- a/platform/templates/service.yaml
+++ b/platform/templates/service.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name }}-svc
-  namespace: {{ .Values.service.namespace }}
+  name: {{ .Values.global.chartName }}-service
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     app: {{ .Values.service.appName }}
