updated applications and platform templates

--- a/platform/templates/new-deployment.yaml
+++ b/platform/templates/new-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.newDeployment.containerName }}
-        image: "{{ .Values.newDeployment.imageRepository }}@{{ .Values.newDeployment.imageTag }}"
+        image: "{{ .Values.newDeployment.imageRepository }}:{{ .Values.newDeployment.imageTag }}"
         resources:
           limits:
             cpu: 200m
